--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,22 @@ body {
 /* HEADER */
 
 .navigation-list-link,
-.header-address-link,
-.header-tel-link {
+.header-address-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-light-theme-color);
+}
+
+.header-tel-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .navigation-list-link:hover,
@@ -183,6 +192,18 @@ body {
   color: #212121;
 }
 
+.filter-list-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-decoration: none;
+}
+
 .filter-list-link:hover,
 .filter-list-link:focus {
   color: var(--accent-color);
@@ -210,4 +231,30 @@ body {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+.logo-footer-first-title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+  text-decoration: none;
+}
+
+.logo-footer-second-title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.logo-footer-link {
+  text-decoration: none;
 }
