--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,17 @@ body {
 
 /* HEADER */
 
-.navigation-list-link,
 .header-address-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.navigation-list-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -233,7 +242,7 @@ body {
   color: #757575;
 }
 
-.logo-footer-first-title {
+.logo-first-title {
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
@@ -244,7 +253,7 @@ body {
   text-decoration: none;
 }
 
-.logo-footer-second-title {
+.logo-second-title {
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
